fix alignment in ugly way

--- a/src/plugins/mentionAvatars/styles.css
+++ b/src/plugins/mentionAvatars/styles.css
@@ -3,6 +3,6 @@
     vertical-align: middle;
     width: 1em;
     height: 1em;
-    margin: 0 4px;
+    margin: 0 4px 0.2rem;
     border-radius: 50%;
 }
